--- a/service_composition/pybossa/json_presenter.html
+++ b/service_composition/pybossa/json_presenter.html
@@ -1,4 +1,4 @@
-<h2>Is this source related to the Etna volcanic eruption?</h2>
+<h2>[[title]]</h2>
 <div style="display: flex; flex-direction: row; margin-bottom: 2rem;">
     <div style="padding: 1rem;">
         <img id="profile-picture">
