Minor styling: footer and checkboxes

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -185,7 +185,7 @@
                 </div>
             </div>
             <div class="row">
-                <div class="input-group mb-3 formulateQuestionGroup" style="display:none">
+                <div class="input-group mb-3 pl-3 col-11 formulateQuestionGroup" style="display:none">
                     <div class="input-group-prepend">
                         <span class="input-group-text" id="basic-addon3">Formulate your question</span>
                     </div>
@@ -249,10 +249,10 @@
     <div class="overlay"></div>
     <div class="container">
         <div class="row">
-            <div class="col-lg-6 h-100 text-center text-lg-left my-auto">
+            <div class="col-lg-5 h-100 text-center text-lg-left my-auto">
                 <p class="text-muted mb-4 mb-lg-0">Multidisciplinary project</p>
             </div>
-            <div class="col-lg-3 h-100 text-center text-lg-left my-auto">
+            <div class="col-lg-4 h-100 text-center text-lg-left my-auto">
                 <p class="text-muted mb-4 mb-lg-0"><i class="far fa-envelope pr-2"></i>elizaveta.kantina@mail.polimi.it
                 </p>
                 <p class="text-muted mb-4 mb-lg-0"><i class="far fa-envelope pr-2"></i>manuel.pedrozo@mail.polimi.it</p>
