Fixed typo in service data value

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -213,8 +213,8 @@
                     </div>
                     <div id="dropGeolocation" data-service-order="Geolocation" class="col-2 service-order">Geolocation
                     </div>
-                    <div id="dropFilters" data-service-order="Pybossa" class="col-2 service-order">Filters</div>
-                    <div id="dropCrowdsourcing" data-service-order="CIME" class="col-2 service-order">Crowdsourcing
+                    <div id="dropFilters" data-service-order="CIME" class="col-2 service-order">Filters</div>
+                    <div id="dropCrowdsourcing" data-service-order="Pybossa" class="col-2 service-order">Crowdsourcing
                     </div>
                     <div id="dropDummy" data-service-order="One Dummy service"
                          class="col-2 reset-line-height service-order">One Dummy service
