Geolocation-CIME, Filters-Filters

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -211,9 +211,9 @@
                     <div id="dropTwitterCrawler" data-service-order="Twitter crawler"
                          class="col-2 reset-line-height service-order">Twitter Crawler
                     </div>
-                    <div id="dropGeolocation" data-service-order="Geolocation" class="col-2 service-order">Geolocation
+                    <div id="dropGeolocation" data-service-order="CIME" class="col-2 service-order">Geolocation
                     </div>
-                    <div id="dropFilters" data-service-order="CIME" class="col-2 service-order">Filters</div>
+                    <div id="dropFilters" data-service-order="Filters" class="col-2 service-order">Filters</div>
                     <div id="dropCrowdsourcing" data-service-order="Pybossa" class="col-2 service-order">Crowdsourcing
                     </div>
                     <div id="dropDummy" data-service-order="One Dummy service"
